--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -3,8 +3,14 @@
 </head>
 
 <body>
-  {{> getData}}
+  <h1>EVE Trading</h1>
+
+  {{> comparisonType}}
+  <br>
+  {{> goodType}}
   {{> tree-map}}
+
+
 </body>
 
 
